salesforce-metadata/force-app/main/default/objects/Onboarding_task__c/Onboarding_task__c.object-meta.xml
<CustomObject>
    <description>Tracks individual onboarding tasks</description>
    <label>Onboarding task</label>
    <nameField>
        <label>Onboarding task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>