salesforce-metadata/force-app/main/default/objects/Onboarding_task__c/fields/Client_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Client_Onboarding__c</fullName>
    <label>Client Onboarding</label>
    <referenceTo>Client_Onboarding__c</referenceTo>
    <relationshipLabel>Onboarding tasks</relationshipLabel>
    <relationshipName>Onboarding_tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>