salesforce-metadata/force-app/main/default/objects/Onboarding_task__c/fields/Task_One__c.field-meta.xml
<CustomField>
    <fullName>Task_One__c</fullName>
    <label>Task One</label>
    <length>80</length>
    <type>Text</type>
</CustomField>