salesforce-metadata/force-app/main/default/objects/Onboarding_task__c/validationRules/Requires_completed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Requires_completed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Client_Onboarding__r.Status__c) = &quot;Completed&quot;</errorConditionFormula>
    <errorDisplayField>Client_Onboarding__c</errorDisplayField>
    <errorMessage>Onboarding Date is required when status is completed</errorMessage>
</ValidationRule>